<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_type"
        app:layout_constraintEnd_toStartOf="@+id/volume_level"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/volume_level" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.aracroproducts.presentationhelper.StartRecording"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/volume_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_start_recording" />

    <SeekBar
        android:id="@+id/volume_level"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:max="10"
        android:progress="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/too_quiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/warn_too_quiet"
        android:textAppearance="@style/AppTheme.text.userWarning"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/too_fast"
        app:layout_constraintEnd_toEndOf="@+id/fragment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/fragment"
        app:layout_constraintTop_toTopOf="@+id/fragment"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/too_fast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/warn_too_fast"
        android:textAppearance="@style/AppTheme.text.userWarning"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/too_much_filler"
        app:layout_constraintEnd_toEndOf="@+id/fragment"
        app:layout_constraintStart_toStartOf="@+id/fragment"
        app:layout_constraintTop_toBottomOf="@+id/too_quiet" />

    <TextView
        android:id="@+id/too_much_filler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/warn_too_much_filler"
        android:textAppearance="@style/AppTheme.text.userWarning"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/too_loud"
        app:layout_constraintEnd_toEndOf="@+id/fragment"
        app:layout_constraintStart_toStartOf="@+id/fragment"
        app:layout_constraintTop_toBottomOf="@+id/too_fast" />

    <TextView
        android:id="@+id/too_loud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/warn_too_loud"
        android:textAppearance="@style/AppTheme.text.userWarning"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/too_slow"
        app:layout_constraintEnd_toEndOf="@+id/fragment"
        app:layout_constraintStart_toStartOf="@+id/fragment"
        app:layout_constraintTop_toBottomOf="@+id/too_much_filler" />

    <TextView
        android:id="@+id/too_slow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warn_too_slow"
        android:textAppearance="@style/AppTheme.text.userWarning"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/fragment"
        app:layout_constraintEnd_toEndOf="@+id/fragment"
        app:layout_constraintStart_toStartOf="@+id/fragment"
        app:layout_constraintTop_toBottomOf="@+id/too_loud" />

    <TextView
        android:id="@+id/textview_current_room_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/volume_level"
        app:layout_constraintEnd_toEndOf="@+id/volume_level"
        app:layout_constraintStart_toStartOf="@+id/volume_level" />
</androidx.constraintlayout.widget.ConstraintLayout>